tket/tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_duplicate_h_codegen@llvm21.snap
---
source: tket/tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i64 @_hl.main.1(i64 %0) !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = call i64 @_hl.__tk2_helios_h.6(i64 %0), !dbg !7
  %2 = call i64 @_hl.__tk2_helios_h.6(i64 %1), !dbg !8
  ret i64 %2
}

define i64 @_hl.__tk2_helios_h.6(i64 %0) !dbg !9 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @___rxy(i64 %0, double 0x3FF921FB54442D18, double 0xBFF921FB54442D18), !dbg !10
  call void @___rz(i64 %0, double 0x400921FB54442D18), !dbg !11
  ret i64 %0
}

declare void @___rxy(i64, double, double)

declare void @___rz(i64, double)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !2, line: 25254, type: !4, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6, !6}
!6 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!7 = !DILocation(line: 27062, column: 402, scope: !3)
!8 = !DILocation(line: 5388, column: 404, scope: !3)
!9 = distinct !DISubprogram(name: "_hl.__tk2_helios_h.6", linkageName: "_hl.__tk2_helios_h.6", scope: null, file: !2, line: 23594, type: !4, scopeLine: 23595, spFlags: DISPFlagDefinition, unit: !1)
!10 = !DILocation(line: 23807, column: 508, scope: !9)
!11 = !DILocation(line: 6962, column: 212, scope: !9)
